--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^18",
     "react-countup": "^6.5.0",
     "react-dom": "^18",
+    "react-hook-form": "^7.49.2",
     "react-icons": "^4.11.0",
     "react-tsparticles": "^2.12.2",
     "swiper": "^11.0.5",
