--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "@emailjs/browser": "^3.11.0",
     "framer-motion": "^10.16.4",
-    "next": "13.5.4",
+    "next": "^14.0.4",
     "react": "^18",
     "react-countup": "^6.5.0",
     "react-dom": "^18",
