--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@emailjs/browser": "^3.11.0",
+    "@vercel/speed-insights": "^1.0.4",
     "framer-motion": "^10.16.4",
     "next": "^14.0.4",
     "react": "^18",
